Converted list implementations to Processing

--- a/SourceCode/Processing/Makefile
+++ b/SourceCode/Processing/Makefile
@@ -1,12 +1,20 @@
 # Run the commandline compiler and runtime for all Processing code.
 # This isn't quite running unit tests, but the effect should be similar.
-PROCESS = ~/processing-2.0b9/processing-java
-# Use this one on Linux
-# BUILD = build
-# On Windows, I can't make it work without an absolute path
-BUILD = c:/shaffer/OpenDSA/SourceCode/Processing/build
 
-all: Demo Trees Sorting Graphs
+# If you get errors that DISPLAY is not set, then do:
+# (Bash) export DISPLAY=:0.0
+# (csh/tcsh) setenv DISPLAY :0.0
+
+PROCESS = ~/processing-2.0b9/processing-java
+
+# Use this one on Linux
+BUILD = build
+# On Windows, I can't make it work without an absolute path
+# BUILD = c:/shaffer/OpenDSA/SourceCode/Processing/build
+
+# Run this to test the code for errors
+all: Demo Misc Lists Trees Sorting Graphs
+# Use "sorttest" if you want to run sorting timings
 
 clean:
 	-rm -rf build
@@ -21,40 +29,56 @@ UpDown:
 	-@rm -rf build/UpDown
 	@mkdir build/UpDown
 	@cp Demo/UpDown.pde build/UpDown
-	@$(PROCESS) --run --sketch="build/UpDown" --output="build/build" --force
+	@$(PROCESS) --run --sketch="$(BUILD)/UpDown" --output="build/build" --force
 
 Fact: 
 	@echo "Factorial Test"
 	-@rm -rf build/Fact
 	@mkdir build/Fact
 	@cp Misc/Fact.pde build/Fact
-	@$(PROCESS) --run --sketch="build/Fact" --output="build/build" --force
+	@$(PROCESS) --run --sketch="$(BUILD)/Fact" --output="build/build" --force
 
 TOH: 
 	@echo "TOH Test"
 	-@rm -rf build/TOH
 	@mkdir build/TOH
 	@cp Misc/TOH.pde build/TOH
-	@$(PROCESS) --run --sketch="build/TOH" --output="build/build" --force
+	@$(PROCESS) --run --sketch="$(BUILD)/TOH" --output="build/build" --force
 
 Fibonnaci: 
 	@echo "Fibonnaci Test"
 	-@rm -rf build/Fibonnaci
 	@mkdir build/Fibonnaci
 	@cp Misc/Fibonnaci.pde build/Fibonnaci
-	@$(PROCESS) --run --sketch="build/Fibonnaci" --output="build/build" --force
+	@$(PROCESS) --run --sketch="$(BUILD)/Fibonnaci" --output="build/build" --force
 
 Largest: 
 	@echo "Analysis Chapter Test"
 	-@rm -rf build/Anal
 	@mkdir build/Anal
 	@cp Misc/Anal.pde build/Anal
-	@$(PROCESS) --run --sketch="build/Anal" --output="build/build" --force
+	@$(PROCESS) --run --sketch="$(BUILD)/Anal" --output="build/build" --force
+
+Lists: ListTest
+
+ListTest: build/ListTest/success
+
+build/ListTest/success: Lists/ListADT.pde Lists/AList.pde Lists/Link.pde Lists/LList.pde Lists/ListTest.pde
+	@echo "Array-based and Linked List Test"
+	-@rm -rf build/ListTest
+	@mkdir build/ListTest
+	@cp Lists/ListADT.pde build/ListTest
+	@cp Lists/AList.pde build/ListTest/
+	@cp Lists/LList.pde build/ListTest/
+	@cp Lists/Link.pde build/ListTest/
+	@cp Lists/ListTest.pde build/ListTest/
+	@$(PROCESS) --run --sketch="$(BUILD)/ListTest" --output="$(BUILD)/build" --force
 
 Trees: GenTree UFTest
 
 Sorting: Inssort InssortKV Bubblesort Selsort Shellsort Mergesort MergesortOpt Quicksort Heapsort Binsort Radixsort
 
+# This will to timing tests. The "Sorting" target tests for errors.
 Sorttime: InssortTime BubblesortTime SelsortTime
 
 Graphs: GraphDummy GraphTrav GraphTop GraphDijk GraphMCST
@@ -67,7 +91,7 @@ build/GenTree/success: Trees/GenTree.pde
 	-@rm -rf build/GenTree
 	@mkdir build/GenTree
 	@cp Trees/GenTree.pde build/GenTree
-	@$(PROCESS) --run --sketch="build/GenTree" --output="build/build" --force
+	@$(PROCESS) --run --sketch="$(BUILD)/GenTree" --output="build/build" --force
 
 UFTest: build/UFTest/success
 
@@ -77,7 +101,7 @@ build/UFTest/success: Trees/ParPtrTree.pde Trees/UFTest.pde
 	@mkdir build/UFTest
 	@cp Trees/ParPtrTree.pde build/UFTest
 	@cp Trees/UFTest.pde build/UFTest
-	@$(PROCESS) --run --sketch="build/UFTest" --output="build/build" --force
+	@$(PROCESS) --run --sketch="$(BUILD)/UFTest" --output="build/build" --force
 
 Inssort: build/InssortTest/success
 
@@ -237,7 +261,7 @@ build/GraphDummy/success: Graphs/GraphDummy.pde Graphs/Graph.pde Graphs/GraphM.p
 	@cp Graphs/GraphDummy.pde build/GraphDummy
 	@cp Graphs/Graph.pde build/GraphDummy
 	@cp Graphs/GraphM.pde build/GraphDummy
-	@$(PROCESS) --run --sketch="build/GraphDummy" --output="build/build" --force
+	@$(PROCESS) --run --sketch="$(BUILD)/GraphDummy" --output="build/build" --force
 
 GraphTrav: build/GraphTrav/success
 
@@ -256,7 +280,7 @@ build/GraphTrav/success: Graphs/BFS.pde Graphs/DFS.pde Graphs/Graph.pde Graphs/G
 	@cp Lists/Queue.pde build/GraphTrav
 	@cp Lists/LQueue.pde build/GraphTrav
 	@cp Lists/Link.pde build/GraphTrav
-	@$(PROCESS) --run --sketch="build/GraphTrav" --output="build/build" --force
+	@$(PROCESS) --run --sketch="$(BUILD)/GraphTrav" --output="build/build" --force
 
 GraphTop: build/GraphTop/success
 
@@ -275,7 +299,7 @@ build/GraphTop/success: Graphs/TopsortBFS.pde Graphs/TopsortDFS.pde Graphs/Graph
 	@cp Lists/Queue.pde build/GraphTop
 	@cp Lists/LQueue.pde build/GraphTop
 	@cp Lists/Link.pde build/GraphTop
-	@$(PROCESS) --run --sketch="build/GraphTop" --output="build/build" --force
+	@$(PROCESS) --run --sketch="$(BUILD)/GraphTop" --output="build/build" --force
 
 GraphDijk: build/GraphDijk/success
 
@@ -296,7 +320,7 @@ build/GraphDijk/success: Graphs/Graph.pde Graphs/GraphM.pde Graphs/GraphL.pde Gr
 	@cp Graphs/DijkstraPQ.pde build/GraphDijk
 	@cp Utils/KVPair.pde build/GraphDijk
 	@cp Trees/MinheapKV.pde build/GraphDijk
-	@$(PROCESS) --run --sketch="build/GraphDijk" --output="build/build" --force
+	@$(PROCESS) --run --sketch="$(BUILD)/GraphDijk" --output="build/build" --force
 
 GraphMCST: build/GraphMCST/success
 
@@ -319,4 +343,4 @@ build/GraphMCST/success: Graphs/Graph.pde Graphs/GraphM.pde Graphs/GraphL.pde Gr
 	@cp Utils/KVPair.pde build/GraphMCST
 	@cp Trees/MinheapKV.pde build/GraphMCST
 	@cp Trees/ParPtrTree.pde build/GraphMCST
-	@$(PROCESS) --run --sketch="build/GraphMCST" --output="build/build" --force
+	@$(PROCESS) --run --sketch="$(BUILD)/GraphMCST" --output="build/build" --force
